WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254678
[UI-side compositing] Fix for assert in scrollbar tests: scrollerImp == scroller->scrollerImp()
https://bugs.webkit.org/show_bug.cgi?id=254678
Summary
[UI-side compositing] Fix for assert in scrollbar tests: scrollerImp == scrol...
Nikos Mouchtaris
Reported
2023-03-29 12:25:41 PDT
[UI-side compositing] Fix for assert in scrollbar tests: scrollerImp == scroller->scrollerImp()
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-29 12:26:49 PDT
<
rdar://problem/107380404
>
Nikos Mouchtaris
Comment 2
2023-03-29 12:29:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12127
EWS
Comment 3
2023-03-29 16:38:43 PDT
Committed
262301@main
(3fb91e2c59ba): <
https://commits.webkit.org/262301@main
> Reviewed commits have been landed. Closing PR #12127 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug