[UI-side compositing] Fix for assert in scrollbar tests: scrollerImp == scroller->scrollerImp() https://bugs.webkit.org/show_bug.cgi?id=254678 rdar://107380404

Reviewed by Simon Fraser.

We need to update the ScrollerPairMac for the new NSScrollerImps created
in ScrollerMac::updateScrollbarStyle.

* Source/WebCore/page/scrolling/mac/ScrollerMac.h:
* Source/WebCore/page/scrolling/mac/ScrollerMac.mm:
(WebCore::ScrollerMac::setHostLayer):
(WebCore::ScrollerMac::updateScrollbarStyle):
(WebCore::ScrollerMac::updatePairScrollerImps):

Canonical link: https://commits.webkit.org/262301@main